K8s folder/project/full-stack_chatApp/k8s/backend-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-backend
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app-backend
  template:
    metadata:
      labels:
        app: chat-app-backend
    spec:
      containers:
      - name: chat-app-backend
        image: arush75/chat-app-backend:v1
        ports:
        - containerPort: 5001
