K8s folder/project/full-stack_chatApp/k8s/mongodb-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-mongodb
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app-mongodb
  template:
    metadata:
      labels:
        app: chat-app-mongodb
    spec:
      containers:
      - name: chat-app-mongodb
        image: mongo
        ports:
        - containerPort: 27017
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-pvc
