K8s folder/project/full-stack_chatApp/k8s/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chat-app
spec:
  selector:
    app: chat-app-frontend
  ports:
  - port: 80
    targetPort: 80
