K8s folder/project/full-stack_chatApp/k8s/mongo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: chat-app
spec:
  selector:
    app: chat-app-mongodb
  ports:
  - port: 27017
    targetPort: 27017
