K8s folder/project/full-stack_chatApp/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-ingress
  namespace: chat-app 
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend 
                port:
                  number: 80 
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend 
                port:
                  number: 5001
